package service;
option cc_generic_services = true;

message NullResponse {
}

message ClientInfoRequest {
	optional string nickname = 1;
	required int32 playernum = 2;
}

message ClientCommandRequest {
	required int32 playernum = 1;
	required string command = 2;
	required string args = 3;
}

message ClientCommandResponse {
	optional string messageToPrint = 1;
}

message PrintfRequest {
	required string msg = 1;
}

service Q3dfApi {
	rpc ClientConnected (ClientInfoRequest) returns (NullResponse);
	rpc ClientDisconnected (ClientInfoRequest) returns (NullResponse);
	rpc ClientCommand (ClientCommandRequest) returns (ClientCommandResponse);
	rpc Printf(PrintfRequest) returns (NullResponse);
}
